--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
-  "name": "SHA-256",
+  "name": "sha256",
   "version": "1.0.0",
   "description": "SHA-256",
   "main": "SHA_256_K7M19.js",
   "scripts": {
-    "serve": "webpack-dev-server",
-    "test": "set TS_NODE_COMPILER_OPTIONS={\"module\": \"commonjs\" } & mocha --timeout 500000 --require ts-node/register ./test/**/*.ts",
-    "start": "lite-server",
-    "build": "webpack"
+    "test": "mocha --timeout 500000 --require ts-node/register ./test/**/*.ts",
+    "lint": "eslint '{src,test}/**/*.{js,ts}'",
+    "build": "tsc"
   },
   "keywords": [
     "typescript",
@@ -19,17 +18,18 @@
     "@types/expect": "^24.3.0",
     "@types/lodash": "^4.14.185",
     "@types/mocha": "^9.1.1",
-    "lite-server": "^2.5.4",
+    "@typescript-eslint/eslint-plugin": "^6.0.0",
+    "@typescript-eslint/parser": "^6.0.0",
+    "eslint": "^8.44.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "mocha": "^10.0.0",
+    "prettier": "3.0.0",
     "ts-loader": "^9.4.1",
-    "typescript": "^4.8.3",
-    "webpack": "^5.74.0",
-    "webpack-cli": "^4.10.0",
-    "webpack-dev-server": "^4.11.1"
+    "ts-node-register": "^1.0.0",
+    "typescript": "^4.8.3"
   },
   "dependencies": {
-    "hash": "^0.2.1",
-    "js-sha256": "^0.9.0",
-    "ts-node-register": "^1.0.0"
+    "js-sha256": "^0.9.0"
   }
 }
