--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Mahmoud Kaffel",
   "license": "ISC",
   "devDependencies": {
+    "@types/chai": "^4.3.5",
     "@types/expect": "^24.3.0",
     "@types/lodash": "^4.14.185",
     "@types/mocha": "^9.1.1",
@@ -24,6 +25,7 @@
     "eslint": "^8.44.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^5.0.0",
+    "lodash": "^4.17.21",
     "mocha": "^10.0.0",
     "prettier": "3.0.0",
     "ts-loader": "^9.4.1",
@@ -32,6 +34,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "chai": "^4.3.7",
     "js-sha256": "^0.9.0"
   }
 }
