--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "typescript": "^4.8.3"
   },
   "dependencies": {
+    "@noble/hashes": "^1.3.1",
     "chai": "^4.3.7",
     "js-sha256": "^0.9.0"
   }
